aggregator/timestamps: created feature for set period at graph click
